--- a/src/style/ContactList.css
+++ b/src/style/ContactList.css
@@ -1,5 +1,12 @@
 .contact-list {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
+}
+
+@media (max-width: 550px) {
+  .contact-list {
+    flex-direction: column;
+  }
 }
