Freshen up look
* Center the document
* Center document title
* Modify summary spacing
* Shorten section titles

--- a/src/style/Summary.css
+++ b/src/style/Summary.css
@@ -1,7 +1,8 @@
 .summary-list-item .summary-list {
   column-count: 2;
-  padding-left: 40px;
+  padding-top: 0.3rem;
   list-style-position: inside;
+  line-height: 1.4rem;
 }
 
 .summary-list {
