--- a/src/style/Resume.css
+++ b/src/style/Resume.css
@@ -8,12 +8,22 @@
   font-size: 0.9rem;
 }
 
+.resume-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 h1, h2, h3 {
   font-family: 'Poppins', sans-serif;
 }
 
 @media print {
   .resume {
+    display: block;
+  }
+
+  .resume-wrapper {
     display: block;
   }
 }
